# autotest

./: .env  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  Rocket.toml  diesel-write.toml  docker-compose.dev.yml  docker-compose.prod.yaml  docker-compose.prod.yml  docker-compose.staging.yaml  docker-compose.yml  readme.md
.githooks/: commit-msg
migrations/2022-01-31-154934_create_users/: up.sql
migrations/2022-03-05-133713_create_users/: up.sql
src/: main.rs  schema.rs
src/application/command/: delete_user_command.rs  delete_user_handler.rs  generate_testing_command.rs  generate_testing_handler.rs  login_user_command.rs  login_user_handler.rs  mod.rs  register_user_command.rs  register_user_handler.rs  show_user_command.rs  show_user_handler.rs  update_user_command.rs  update_user_handler.rs
src/application/event/: deleted_user_event.rs  deleted_user_listener.rs  mod.rs  update_user_event.rs  update_user_listener.rs
src/core/: mod.rs
src/core/domain/: mod.rs  testing.rs  user.rs
src/core/ports/: mod.rs  testing_response.rs  user.rs  user_facade.rs  user_response.rs
src/core/services/: user.rs
src/domain/: user.rs  user_repository.rs
src/handler/http/: mod.rs  testing_controller.rs  user_controller.rs
src/handler/http/middleware/: cors.rs  jwt.rs
src/infrastructure/api/: mod.rs  user_controller.rs
src/infrastructure/models/write/: new_user.rs
src/infrastructure/repository/: connection_manager.rs  user_repository.rs
src/models/: users.rs
src/router/: users.rs
src/services/: password_service.rs
