[package]
name = "autotest"
version = "0.1.0"
authors = ["Kacper Perzankowski <perzankowski.kacper@gmail.com>"]
edition = "2018"

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["tera"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
diesel = { version = "1.4.1", features = ["postgres", "uuid"] }
dotenv = "0.13.0"
eventbus = "0.5.1"
lazy_static = "1.3.0"
uuid = "0.6"