[package]
name = "autotest"
version = "0.1.0"
authors = ["Theo Fenique <theo.fenique@gmail.com>"]
edition = "2018"

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["uuid", "json"] }
rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["tera"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
diesel = { version = "1.4.1", features = ["postgres", "uuidv07", "chrono"] }
dotenv = "0.13.0"
lazy_static = "1.3.0"
pwhash = "1.0"
uuid = { version = "0.8", features = ["v4", "serde"] }
jsonwebtoken = "8"

[dependencies.chrono]
version = "0.4.19"
features = ["serde"]